# kalam-agent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
backend/: filetree.py  main.py  pyproject.toml  todo_app.py
backend/agents/coder/: graph.py
backend/agents/coder/nodes/: checkpoint.py  code_generator.py  context_retriever.py  decomposer.py  file_writer.py  verifier.py
backend/agents/coder/schema/: state.py
backend/agents/master/: graph.py
backend/agents/master/nodes/: designer.py  executor.py  planner.py  shell_executor.py
backend/agents/master/schema/: state.py
backend/api/: routes.py
backend/src/: newfile.py  print_directory_contents.py  worldfoo.py
backend/test/: main.py  palindrome_test.py
backend/tests/: test_example.py
frontend/tui/: app.py  main.py  pyproject.toml
frontend/tui/widgets/: __init__.py  model_list.py
kalam/: __main__.py  app.py  kalam.tcss
kalam/agents/: utils.py
kalam/agents/coder/: graph.py
kalam/agents/coder/nodes/: brain.py  checkpoint.py  code_generator.py  context_retriever.py  decomposer.py  file_writer.py  verifier.py
kalam/agents/coder/schema/: state.py
kalam/agents/master/: graph.py
kalam/agents/master/nodes/: designer.py  executor.py  planner.py  shell_executor.py
kalam/agents/master/schema/: state.py
kalam/agents/tools/: __init__.py  shell_tool.py
kalam/widgets/: __init__.py  model_config.py
