[project]
name = "kalam"
version = "0.1.0"
description = "AI coding agent"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
kalam = "kalam.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kalam*"]

[tool.setuptools.package-data]
kalam = ["*.tcss"]
