[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-ollama>=0.4.0",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "uvicorn>=0.34.0",
]
